# logbook-challenge

./: README.md  TODO.md  foreflight_integration_checklist.md  main.py  manage.py  pyproject.toml  pytest.ini
logbook/: asgi.py  settings.py  urls.py  wsgi.py
pilotlog/: export_csv.py  exporter.py  importer.py  models.py  views.py
pilotlog/migrations/: 0001_initial.py
pilotlog/serializers/: base_serializers.py  export_serializers.py  import_serializers.py
pilotlog/tests/: test_exporter.py  test_serializers.py  test_views.py
